deployment/user-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-api-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:745263491396:certificate/09c37bae-b891-4b1d-a12a-829148846231
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ports: "443,8443"

spec:
  selector:
    app: user-api
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8081
    - name: https
      port: 443
      targetPort: 8081
